# Normo

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml  sts_output.txt  uwu.py  webserver.py
code/: output.py
cogs/: animals.py  code.py  creator.py  fun.py  games.py  giveaway.py  images.py  info.py  maths.py  moderation.py  music.py  slash.py  utility.py
