[tool.poetry]
name = "repl_python3_Nromal-Bot"
version = "0.1.0"
description = ""
authors = ["Kavoya <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
yarl = "^1.7.2"
aiohttp = "^3.8.1"
Flask = "^2.0.2"
orjson = "^3.6.5"
python-dotenv = "^0.19.2"
typing-extensions = "^4.0.1"
py-cord = {git = "https://github.com/Pycord-Development/pycord"}
aiopyston = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
